fix(ToggleableTags): add wrapping, and margins

--- a/src/postcss/toggleable-tags.css
+++ b/src/postcss/toggleable-tags.css
@@ -1,7 +1,8 @@
 .toggleable-tags {
   display: flex;
+  flex-wrap: wrap;
 
   & .button:not(:last-child) {
-    margin-right: 8px;
+    margin: 0 8px 8px 0;
   }
 }
